refactor(selection): 优化选择工具实现细节
- 使用 getLast() 方法替代 get(size - 1) 获取多边形最后一个点
- 简化选择管理器中的 switch 语句逻辑
- 移除平面切片计算中的不必要的容量预分配
- 调整渲染器中半径预览方法的参数结构